[package]
name = "admin-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
server = { path = "../server" }
common = { path = "../common" }

clap = { version = "4.1.4", features = ["derive"] }
tokio = { version = "1.25.0", features = ["full"] }

notan = { version = "0.9", features = ["egui"] }
message-io = "0.14.6"
egui = "0.21.0"
eframe = "0.21.3"