[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
bincode = "1.3.3"
message-io = "0.14.6"
tokio = { version = "1.25.0", features = ["full"] }
hecs = { version = "0.9.1", features = ["macros"] }
common = { path = "../common" }