[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]

# General libs
thiserror = "1.0.38"
anyhow = "1.0.68"
#enum_dispatch = "0.3"
itertools = "0.10.5"
ordered-float = "3.4.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serializing
#serde = { version = "1.0.152", features = ["derive"] }
bincode = "1.3.3"

# Rendering & Windowing
fps_counter = "2.0"
notan = { version = "0.9", features = ["egui"] }
#egui = "0.20.1"
color-thief = "0.2.2"
image = "0.24.5"

# CLI Arguments
clap = { version = "4.1.4", features = ["derive"] }
once_cell = "1.17.0"

# Game logic
hecs = { version = "0.9.1", features = ["macros"] }
resources = "1.1.0"
common = { path = "../common" }

# Math
glam = "0.23.0"

# Networking
message-io = "0.14.6"
tokio = { version = "1.25.0", features = ["full"] }
admin-client = { path = "../admin-client" }

# Diagnostic
puffin = "0.14.3"
puffin_egui = "=0.19.2"

[features]
default = []
semitransparency = []