[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
message-io = "0.14.6"
bincode = "1.3.3"
tokio = { version = "1.25.0", features = ["full"] }
common = { path = "../common" }