[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1.4", features = ["derive"] }
message-io = "0.14.6"
bincode = "1.3.3"
tokio = { version = "1.25.0", features = ["full"] }
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }

hecs = { version = "0.9.1", features = ["macros"] }
glam = "0.23.0"
resources = "1.1.0"