[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.1", features = ["derive"] }
message-io = "0.14"
bincode = "1.3"
tokio = { version = "1.25", features = ["full"] }
common = { path = "../common" }
serde = { version = "1.0", features = ["derive"] }

hecs = { version = "0.9.1", features = ["macros"] }
glam = "0.23"
resources = "1.1"
chrono = "0.4"
rand = "0.8"